# C-C-project

./: README.md
Akinator/: Akinator_Script.sh  CMakeLists.txt  Tree_Save.txt  Tree_Save_TEST.txt  b.txt  main  main.cpp  tree  work.txt
Akinator/MySteck/: Head_Stack.h
Calc/: CMakeLists.txt  Calc.cpp  Clob.h  Exemple  calc.h  main.cpp
Decimal/: main.c
FINAL_DERBA/: Array_Ptr_Func.cpp  CMakeLists.txt  Calculator.cpp  Calculator.h  Libraries_Consts.h  main.cpp
For_Derb/: .data.swp  CMakeLists.txt  Erorr.cpp  Erorr.h  data_test.txt  main.cpp
Hash_table/: CMakeLists.txt  Hash_table.cpp  Hash_table.h  O  Onegin  Onegin.test  Result_hash1  Result_hash2  Result_hash3  hash_model.ods
List/: CMakeLists.txt  main.c  zhopa.h
MyCPU/Asm/: Asm.cpp  Asm.h  CMakeLists.txt  Const.h  Erorr.cpp  data_asm(exe).txt  data_asm.txt  main.cpp
MyCPU/CPU/: .main.cpp.swp  CMakeLists.txt  CPU.cpp  CPU.h  Erorr.cpp  Erorr.h  MyStack.cpp  MyStack.h  main.cpp
MyCPU/MyStack/: CMakeLists.txt
Onegin/: CMakeLists.txt  main.c
Test2_Game/: CMakeLists.txt  main.cpp  sfml-app
Test3_Game/: CMakeLists.txt  main.cpp  sfml-app
Test_Def__FILE__/: CMakeLists.txt  main.cpp  main2.cpp
Test_Derb/: CMakeLists.txt
Test_Game/: CMakeLists.txt  main.cpp  sfml-app
contest_e/: CMakeLists.txt  main.c
list1.0/: CMakeLists.txt  main.c  main1.c
